# gmres

./: CMakeLists.txt  README.md
src/: arnoldi_mod.f90  bicgstab.f90  cg.f90  chebyshev_precond.f90  givens_mod.f90  gmres_hh.f90  gmres_mf.f90  gmres_mgsr.f90  gmres_mod.f90  householder_mod.f90  interfaces.f90  main.f90  matrix_utils.f90  precond.f90
src/preconds/: chebyshev.f90
src/problems/: hilbert.f90  poisson.f90
src/utils/: utils.f90
tests/: strong_scaling.f90  test1.f90  test2.f90  test_bicgstab.f90  test_cg.f90  test_hilbert.f90  test_poisson.f90  test_poisson_mf.f90  weak_scaling.f90
